tests/transpiler/x/java/values_builtin.error
exit status 1
Main.java:16: error: cannot find symbol
        System.out.println(values(m));
                           ^
  symbol:   method values(Data1)
  location: class Main
1 error
